# bonk

./: .gitignore  CMakeLists.txt  README.md  run-tests.sh
doc/: bonk-activate.1.ronn  bonk-close.1.ronn  bonk-decoration.1.ronn  bonk-focus.1.ronn  bonk-get-active.1.ronn  bonk-get-focus.1.ronn  bonk-get-title.1.ronn  bonk-lower.1.ronn  bonk-map.1.ronn  bonk-move-resize.1.ronn  bonk-opacity.1.ronn  bonk-pick.1.ronn  bonk-prop-adjust.1.ronn  bonk-prop-delete.1.ronn  bonk-raise.1.ronn  bonk-reject.1.ronn  bonk-select.1.ronn  bonk-set-window.1.ronn  bonk-sleep.1.ronn  bonk-state.1.ronn  bonk-terminate.1.ronn  bonk-unmap.1.ronn  bonk.1.ronn
patterns/: t_bad_cmd_values.pattern  t_cmd_activate.pattern  t_cmd_close.pattern  t_cmd_decoration.pattern  t_cmd_focus.pattern  t_cmd_get_active.pattern  t_cmd_get_focus.pattern  t_cmd_get_title.pattern  t_cmd_help.pattern  t_cmd_lower.pattern  t_cmd_move_resize.pattern  t_cmd_opacity.pattern  t_cmd_prop_adjust_delete.pattern  t_cmd_raise.pattern  t_cmd_reject.pattern  t_cmd_select.pattern  t_cmd_set_window.pattern  t_cmd_sleep.pattern  t_cmd_state.pattern  t_cmd_terminate.pattern  t_cmd_unmap_map.pattern  t_simple.pattern  t_stress.pattern
scripts/: common.py  patternize.py  run-with-env.sh  verify.py
src/: CMakeLists.txt  bonk.c  bonk_buffers.c  bonk_command_api.c  bonk_dispatch_table.h  bonk_internal.h  bonk_select.h  bonk_select_api.c  bonk_select_impl.c  xpick.c  xpick.h
src/commands/: b_activate.c  b_close.c  b_decoration.c  b_focus.c  b_get_active.c  b_get_focus.c  b_get_title.c  b_help.c  b_lower.c  b_map.c  b_move_resize.c  b_opacity.c  b_pick.c  b_prop_adjust.c  b_prop_delete.c  b_raise.c  b_reject.c  b_select.c  b_set_window.c  b_sleep.c  b_state.c  b_terminate.c  b_unmap.c
tests/: t_bad_cmd_values.sh  t_cmd_activate.sh  t_cmd_close.sh  t_cmd_decoration.sh  t_cmd_focus.sh  t_cmd_get_active.sh  t_cmd_get_focus.sh  t_cmd_get_title.sh  t_cmd_help.sh  t_cmd_lower.sh  t_cmd_move_resize.sh  t_cmd_opacity.sh  t_cmd_prop_adjust_delete.sh  t_cmd_raise.sh  t_cmd_reject.sh  t_cmd_select.sh  t_cmd_set_window.sh  t_cmd_sleep.sh  t_cmd_state.sh  t_cmd_terminate.sh  t_cmd_unmap_map.sh  t_simple.sh  t_stress.sh
